Navigating to fragment scrolls with writing-mode: vertical-rl

This CL sets the alignment of the Anchor node in accordance, when
vertical-rl writing-mode is set

Bug: 844868
Change-Id: I8357bcccbc88ffcd3b5d01265737a5b60f1e59a8
Reviewed-on: https://chromium-review.googlesource.com/1075956
Commit-Queue: srirama chandra sekhar <srirama.m@samsung.com>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569214}
Former-commit-id: 137ca58808d726e8f78727857a01f6b926034bf0